--- a/gradle/native-build.gradle
+++ b/gradle/native-build.gradle
@@ -40,6 +40,7 @@ ext.nativeBuild = { nativeTargets ->
                         arguments "-DANDROID_TOOLCHAIN=clang"
                         arguments "-DANDROID_STL=" + stl
                         arguments "-DANDROID_CPP_FEATURES=exceptions"
+                        arguments "-D_FORTIFY_SOURCE=2"
 
                         // Enable ccache if the user has installed it.
                         if (file("/usr/bin/ccache").exists()) {
