--- a/MapboxGLAndroidSDK/build.gradle
+++ b/MapboxGLAndroidSDK/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
 android {
     compileSdkVersion androidVersions.compileSdkVersion
+    ndkVersion "21.4.7075529"
 
     defaultConfig {
         minSdkVersion androidVersions.minSdkVersion
