--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,10 @@ jobs:
           distribution: "temurin"
           java-version: "8"
 
-      - uses: nttld/setup-ndk@v1
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
         with:
-          ndk-version: r21e
-          add-to-path: false
+          packages: 'ndk;21.4.7075529'
 
       - name: Build package
         run: make apackage
