--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           java-version: "8"
 
       - name: Setup Android NDK
-        run: sdkmanager --install "ndk;21.4.7075529"
+        run: /usr/local/lib/android/sdk/cmdline-tools/latest/sdkmanager --install "ndk;21.4.7075529"
 
       - name: Build package
         run: make apackage
