--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,11 @@ jobs:
           distribution: "temurin"
           java-version: "8"
 
-      - name: Setup Android NDK
-        run: /usr/local/lib/android/sdk/cmdline-tools/latest/sdkmanager --install "ndk;21.4.7075529"
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+        with:
+          cmdline-tools-version: 9477386
+          packages: 'ndk;21.4.7075529'
 
       - name: Build package
         run: make apackage
