--- a/MapboxGLAndroidSDK/build.gradle
+++ b/MapboxGLAndroidSDK/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 
 android {
     compileSdkVersion androidVersions.compileSdkVersion
-    ndkVersion "21.4.7075529"
+    ndkVersion androidVersions.ndkVersion
 
     defaultConfig {
         minSdkVersion androidVersions.minSdkVersion
