--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -4,6 +4,7 @@ ext {
             minSdkVersion    : 14,
             targetSdkVersion : 28,
             compileSdkVersion: 28,
+            ndkVersion: "21.4.7075529",
     ]
 
     versions = [
