--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,8 @@ jobs:
         run: make apackage
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
+
+      - name: Publish package
+        run: ./gradlew -Pmapbox.abis=all publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
