--- a/gradle/gradle-bintray.gradle
+++ b/gradle/gradle-bintray.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'digital.wup.android-maven-publish'
 apply plugin: 'maven-publish'
-apply plugin: 'com.jfrog.bintray'
-apply plugin: 'com.jfrog.artifactory'
 apply from: file('../gradle/artifact-settings.gradle')
 
 version = project.ext.versionName
@@ -42,44 +40,15 @@ publishing {
             }
         }
     }
-}
 
-bintray {
-    user = mapboxBintrayUser
-    key = mapboxBintrayApiKey
-    publications('MapboxMapsSdkPublication')
-    pkg {
-        repo = project.ext.mapboxBintrayRepoName
-        name = project.ext.mapboxBintrayPackageName
-        userOrg = project.ext.mapboxBintrayUserOrg
-        licenses = [project.ext.mapboxArtifactLicenseName]
-        vcsUrl = project.ext.mapboxArtifactVcsUrl
-        publish = false
-        version {
-            name = project.ext.versionName
-            desc = project.ext.mapboxArtifactDescription
-            released = new Date()
-            gpg {
-                sign = true
-                passphrase = mapboxGpgPassphrase
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/ev-map/mapbox-gl-native-android"
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
             }
-            mavenCentralSync {
-                sync = false
-            }
-        }
-    }
-}
-
-artifactory {
-    contextUrl = 'http://oss.jfrog.org'
-    publish {
-        repository {
-            repoKey = 'oss-snapshot-local'
-            username = mapboxBintrayUser
-            password = mapboxBintrayApiKey
-        }
-        defaults {
-            publications('MapboxMapsSdkPublication')
         }
     }
 }
