--- a/gradle/native-build.gradle
+++ b/gradle/native-build.gradle
@@ -13,10 +13,10 @@ ext.nativeBuild = { nativeTargets ->
         // When building from Android Studio, gradle.properties sets `android.buildOnlyTargetAbi=true` so that
         // only the architecture for the device you're running on gets built.
         def abi = 'all'
-        if (!project.hasProperty('android.injected.invoked.from.ide') || project.hasProperty("mapbox.abis")) {
+        /*if (!project.hasProperty('android.injected.invoked.from.ide') || project.hasProperty("mapbox.abis")) {
             // Errors when the user invokes Gradle from the command line and didn't set mapbox.abis
             abi = project.getProperty("mapbox.abis")
-        }
+        }*/
 
         if (abi != 'none') {
             externalNativeBuild {
