--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,2 +1,2 @@
 before_install:
-  - yes | sdkmanager --install "ndk;21.4.7075529"
+  - yes | sdkmanager --install "ndk;21.4.7075529" "cmake;3.10.2.4988404"
