--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
         run: make apackage
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
+          BUILDTYPE: Release
 
       - name: Publish package
         run: ./gradlew -Pmapbox.abis=all publish
