--- a/gradle/native-build.gradle
+++ b/gradle/native-build.gradle
@@ -1,6 +1,6 @@
 ext.nativeBuild = { nativeTargets ->
     android {
-        defaultPublishConfig project.hasProperty("mapbox.buildtype") ? project.getProperty("mapbox.buildtype") : "debug"
+        defaultPublishConfig "release"
 
         // We sometimes want to invoke Gradle without building a native dependency, e.g. when we just want
         // to invoke the Java tests. When we explicitly specify an ABI of 'none', no native dependencies are
