--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,3 +36,4 @@ jobs:
         run: ./gradlew -Pmapbox.abis=all publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BUILDTYPE: Release
